change naming to DemoRobot

--- a/pages/backup.html
+++ b/pages/backup.html
@@ -7,7 +7,7 @@
   <script src="backup.js"></script>
 </body>
   <h1>Backup</h1>
-  <p>If you would ever run into issues with DemoMonkey and need to reinstall you can download all your
+  <p>If you ever run into issues with DemoRobot and need to reinstall, you can download all your
     configurations using the following links. If you want to copy them into a TamperMonkey script use
     the json download. Pay attention, that you have to fix variables, commands, imports, ...</p>
   <ul id="configurations">  </ul>
