refactor: post-merge cleanup.
cleaning up a few other references after manual merge

--- a/pages/test.html
+++ b/pages/test.html
@@ -12,7 +12,7 @@
 </style>
 <body>
   <div style="border: 1px solid green;">
-    <h1>DemoMonkey Test Page</h1>
+    <h1>DemoRobot Test Page</h1>
     <div id="monkey-stats">
 
     </div>
